syntax="proto3";

option go_package = "./pb";

message ServiceStatus {
    int32 id = 1;
    int32 status = 2;
    uint64 diskFree = 3;
    int32 recentChunkNum = 4;
}

message Ping {}

service HealthCheckService {
    rpc CheckHealthStatus(Ping) returns (ServiceStatus);
}